wellesleynet/roles/k8s/files/statping.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statping
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statping
  serviceName: "statping"
  template:
    metadata:
      labels:
        app: statping
    spec:
      containers:
      - image: statping/statping:v0.90.39
        imagePullPolicy: Always
        name: statping
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: statping
          mountPath: /config
      volumes:
      - name: statping
        persistentVolumeClaim:
          claimName: statping
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: statping
spec:
  selector:
    app: statping
  ports:
  - name: statping
    port: 8080
    protocol: TCP
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: statping
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
  - host: status.kiski.co
    http:
      paths:
      - backend:
          serviceName: statping
          servicePort: 8080
  tls:
  - hosts:
    - status.kiski.co
    secretName: kiskico-wildcard
